syntax = "proto3";

package pb;

service RaftService {
  rpc SetValue (SetValueRequest) returns(SetValueResponse) {}
  rpc Init (InitRequest) returns(InitResponse) {}
}

message SetValueRequest {
  int32 value = 1;
}

message SetValueResponse {
  ResponseStatus message = 2;
}

message InitRequest {
  repeated string nodes = 3;
}

message InitResponse {
  ResponseStatus message = 4;
}

enum ResponseStatus {
  OK = 0;
  FAIL = 1;
}